# portfolio_chatbot_backend

./: Procfile  README.md  main.py  personal.json  personal.txt  pyproject.toml  render.yaml
.devcontainer/: devcontainer.json
kishlay_vectorestore/: index.faiss  index.pkl
